Fixed bug  in  AbstractCoreNode st follow requests are now  removed  corerectly. UI: added option tot accept and follow pending follow request,  center-aligned text in header elements.

--- a/ui/css/signin.css
+++ b/ui/css/signin.css
@@ -26,3 +26,7 @@
         padding: 10px;
         font-size: 16px;
 }
+
+h2{
+    text-align: center;
+}
